<?xml version="1.0"?>
<package>
    <name>ui</name>
    <version>0.7.0</version>
    <description>UI implementation</description>
    <maintainer email="majidgeravand@gmail.com">Majid Geravand</maintainer>
    <license>BSD</license>

    <author>Majid Geravand</author>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- Dependencies needed to compile this package. -->
    <build_depend>roscpp</build_depend>
    <build_depend>cmake_modules</build_depend> <!-- for FindEigen.cmake module -->
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
</package>
